# system_integration

00._Mischellaneous/: stripeiframe.html
01._Modules/html_module/: index.html  index.js
01._Modules/html_no_module/: index.html  myModule.js
01._Modules/node_commonjs/: myModule.js
01._Modules/node_esmodules/: index.js  myModule.js
01._Modules/python/: main.py
01._Modules/python/my_module/: file_one.py  (+1 more)
02._Data_formats/homework/: converter.js  converter.py  data.csv  data.txt  data.yaml  package-lock.json  package.json
04._basic_servers/node/: app.js  converter.js  package.json
04._basic_servers/python/: converter.py  main.py  pyproject.toml
05._date/node/: index.js
08._database_documentation/backup/: mysqlsampledatabase.sql
09._OpenAPI/: package-lock.json  package.json
09._OpenAPI/routers/: usersRouter.js
15._websockets/node/: client.js  index.html  package-lock.json  package.json  server.js
17._multipart_forms/node/: .package-lock.json  app.js  index.html  package-lock.json  package.json
18._redis/node/: index.js  package.json
18._redis/python/basic_example/: pyproject.toml
18._redis/python/pub-sub/: pyproject.toml  start.txt
19._graphql/: app.js
20._graphql/: package-lock.json  package.json
Email_integration/: app.js  package-lock.json  package.json
SMS_integration/: app.js  package-lock.json  package.json
SSE_example/node/: app.js  package.json
mandatory_1_part_2/: package-lock.json  package.json
mandatory_1_part_2/exposee/: app.js  webhook.db
mandatory_2_part_2/: currency.db  index.js  package-lock.json  package.json
(+7 files in other folders)
