[tool.poetry]
name = "basic-example"
version = "0.1.0"
description = ""
authors = ["raskoeStud <rasm546d@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "basic_example"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
