[tool.poetry]
name = "pub-sub"
version = "0.1.0"
description = ""
authors = ["anderslatif <andl@kea.dk>"]
readme = "README.md"
packages = [{include = "pub_sub"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
